# iot_system

./: README.md
MicroPython/: connect_to_wifi.py  connector.py  main.py
MicroPython/devices/: diod.py  items.py  main_class.py  servo.py
web/: pyproject.toml  req.txt
web/devices/admin/: __init__.py  devices.py  items.py
web/devices/api/: urls.py
web/devices/api/device/: serializers.py  urls.py  views.py
web/devices/api/items/: serializers.py  urls.py  views.py
web/devices/migrations/: 0001_initial.py
web/devices/models/: __init__.py  device.py  items.py
web/devices/templates/admin/devices/device/: change_form_object_tools.html
